--- a/kindleClock.html
+++ b/kindleClock.html
@@ -1,8 +1,8 @@
-<iframe src="http://free.timeanddate.com/clock/i7ox5dw5/n263/fn2/fs150/ftb/tt1/tw0/tm1" frameborder="0" width="1200" height="200"></iframe>
+<iframe src="https://free.timeanddate.com/clock/i7ox5dw5/n263/fn2/fs150/ftb/tt1/tw0/tm1" frameborder="0" width="1200" height="200"></iframe>
 <br>
 <br>
 <br>
 <br>
 <br>
 <br>
-<iframe src="http://free.timeanddate.com/clock/i7ox4zsz/n263/fn2/fs250/ftb/th1/ts1" frameborder="0" width="1200" height="280"></iframe>
+<iframe src="https://free.timeanddate.com/clock/i7ox4zsz/n263/fn2/fs250/ftb/th1/ts1" frameborder="0" width="1200" height="280"></iframe>
